force-app/main/default/objects/Department__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block 1</fullName>
            </value>
            <value>
                <fullName>Block 2</fullName>
            </value>
            <value>
                <fullName>Block 3</fullName>
            </value>
            <value>
                <fullName>Block 4</fullName>
            </value>
            <value>
                <fullName>Block 5</fullName>
            </value>
            <value>
                <fullName>Block 6</fullName>
            </value>
            <value>
                <fullName>Block 7</fullName>
            </value>
            <value>
                <fullName>Block 8</fullName>
            </value>
            <value>
                <fullName>Block 9</fullName>
            </value>
            <value>
                <fullName>Block 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>