force-app/main/default/objects/Department__c/fields/Depattment__c.field-meta.xml
<CustomField>
    <fullName>Depattment__c</fullName>
    <label>Depattment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>