force-app/main/default/objects/Department__c/fields/Location_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>Location_Identifiers__c</fullName>
    <label>Location Identifiers</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>